@@ -54,8 +54,6 @@ class channels:
 
         self.sky_now_link = 'https://epgservices.sky.com/5.1.1/api/2.0/channel/json/%s/now/nn/3'
         # self.sky_programme_link = 'http://tv.sky.com/programme/channel/%s/%s/%s.json'
-        # self.related_link = 'https://api.trakt.tv/movies/%s/related'
-        self.related_link = 'https://api.themoviedb.org/3/movie/%s/similar?api_key=%s&page=1' % ('%s', self.tm_user)
 
         self.fanart_tv_user = control.setting('fanart.tv.user')
         self.fanart_tv_headers = {'api-key': api_keys.fanarttv_key}
@@ -66,6 +64,8 @@ class channels:
         self.tm_user = control.setting('tm.user') or api_keys.tmdb_key
         self.tmdb_api_link = 'https://api.themoviedb.org/3/movie/%s?api_key=%s&language=%s&append_to_response=credits,external_ids' % ('%s', self.tm_user, self.lang)
         self.tm_img_link = 'https://image.tmdb.org/t/p/w%s%s'
+        self.related_link = 'https://api.themoviedb.org/3/movie/%s/similar?api_key=%s&page=1' % ('%s', self.tm_user)
+        # self.related_link = 'https://api.trakt.tv/movies/%s/related'
 
         self.session = requests.Session()
 
