@@ -151,10 +151,12 @@ def set_scrobble(current_time, total_time, _content, _imdb='', _tvdb='', _season
         if int(current_time) > 120 and 2 < percent < 92:
             trakt.scrobbleMovie(_imdb, percent, action='pause') if _content == 'movie' else trakt.scrobbleEpisode(_imdb, _season, _episode, percent, action='pause')
             if control.setting('trakt.scrobble.notify') == 'true':
+                control.sleep(1000)
                 control.infoDialog('Trakt: Scrobble Paused')
         elif percent >= 92:
             trakt.scrobbleMovie(_imdb, percent, action='stop') if _content == 'movie' else trakt.scrobbleEpisode(_imdb, _season, _episode, percent, action='stop')
             if control.setting('trakt.scrobble.notify') == 'true':
+                control.sleep(1000)
                 control.infoDialog('Trakt: Scrobbled')
     except:
         log_utils.log('Scrobble - Exception', 1)
